--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
     "php": ">=5.6",
     "slim/slim": "^3.5.0",
     "monolog/monolog": "^1.21.0",
-    "linecorp/line-bot-sdk": "3.3.0"
+    "linecorp/line-bot-sdk": "3.3.0",
+    "aws/aws-sdk-php": "^3.79"
   },
   "require-dev": {
       "heroku/heroku-buildpack-php": "*"
